phase2-portfolio/k8s/extra(remove_later)/backend-v1.yaml
# Backend v1 Deployment #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
        - name: backend-v1
          image: dockergc00/gc-devops-portfolio-backend-v1:v1
          ports:
            - containerPort: 5000 # Container Port #
