phase2-portfolio/k8s/extra(remove_later)/frontend.yaml
# Frontend Deployment and Service #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dockergc00/gc-devops-portfolio-frontend:v1
          ports:
            - containerPort: 3000
