phase2-portfolio/k8s/extra(remove_later)/backend-service.yaml
# Backend Service for all versions #

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
