phase2-portfolio/k8s/extra(remove_later)/istio-destinationrule.yaml
# Istio DestinationRule for Backend Service Subsets #

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-subsets
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
